--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "BlockBot",
   "version": "1.0.0",
-  "description": "A sample app using Blockly",
+  "description": "A robot project using Blockly",
   "main": "index.js",
   "private": true,
   "scripts": {
